--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Pedal and Piston - Home</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
+    <meta name="format-detection" content="telephone=no">
 </head>
 <header>
     <a class="img_link" href="index.html"><img id="logo" src="imgs/Pedal and Piston Logo Colour Square.png"></a>
