--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
 </header>
 <body>
     <section id="home">
-        <h2>Pedal and piston values blah blah blah</h2>
+        <div id="hero">
+            <div id="hero_bg"></div>
+            <div id="hero_content">
+                <h2 id="hero_text">Welcome to Pedal & Piston, we are a local repair shop specialising in anything with two wheels.</h2>
+            </div>
+        </div>
+    </section>
     </section>
     <section id="bicycles">
-
+        <h1 class="section_heading">Bicycle Services</h1>
     </section>
     <section id="motorcycles">
 
