content added to bicycles section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <header>
     <a class="img_link" href="index.html"><img id="logo" src="imgs/Pedal and Piston Logo Colour Square.png"></a>
-    <a class="nav_button" href="#home">Home</a></li>
+    <a class="nav_button" href="index.html">Home</a></li>
     <a class="nav_button" href="#bicycles">Bicycles</a></li>
     <a class="nav_button" href="#motorcycles">Motorcyles</a></li>
     <a class="nav_button" href="#contact_page">Contact</a></li>
@@ -19,12 +19,59 @@
             <div id="hero_bg"></div>
             <div id="hero_content">
                 <h2 id="hero_text">Welcome to Pedal & Piston, we are a local repair shop specialising in anything with two wheels.</h2>
+                <a class="button" href="#contact_page">Book now</a>
             </div>
         </div>
     </section>
     </section>
     <section id="bicycles">
+    <div id="bicycles">    
         <h1 class="section_heading">Bicycle Services</h1>
+        <div class="flex_grid">
+            <div class="service_item">
+                <h2>Tune up</h2>
+                <ul class="service_items">
+                    <li>Full check over for worn/damaged parts, loose bolts, etc</li>
+                    <li>Tyre pressured checked and/or corrected</li>
+                    <li>Brakes and gears checked and adjusted</li>
+                    <li>Headset and hub bearings checked and adjusted</li>
+                    <li>Full printed health report</li>
+                </ul>
+            </div>
+            <div class="service_item">
+                <h2>Overhaul</h2>
+                <ul class="service_items">
+                    <li>Bike washed</li>
+                    <li>Full check over for worn/damaged parts, loose bolts, etc</li>
+                    <li>Tyre pressured checked and/or corrected</li>
+                    <li>Headset and hub bearings regreased or replaced</li>
+                    <li>All inner and outer gear cables are replaced</li>
+                    <li>Brake cables are replaced if brakes are cable operated or bled if hydraulic</li>
+                    <li>Brake pads are replaced if neccessary</li>
+                    <li>Full printed health report</li>
+                </ul>
+            </div>
+            <div class="service_item">
+                <h2>Front Fork Service</h2>
+                <ul class="service_items">
+                    <li>Fork cleaned inside and out</li>
+                    <li>All seals replaced</li>
+                    <li>Oil replaced</li>
+                    <li>Headset bearings regreased or replaced</li>
+                </ul>
+            </div>
+            <div class="service_item">
+                <h2>Full Suspension Service</h2>
+                <ul class="service_items">
+                    <li>Forks and shock cleaned inside and out</li>
+                    <li>All seals replaced</li>
+                    <li>Oil replaced</li>
+                    <li>Headset bearings regreased or replaced</li>
+                    <li>Rear suspension pivot bearings inspected and regreased or replaced if neccessary</li>
+                </ul>
+            </div>
+        </div>
+    </div>
     </section>
     <section id="motorcycles">
 
