motorcycle content added

--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
     </section>
     </section>
     <section id="bicycles">   
-        <h1 class="section_heading">Bicycle Services</h1>
+        <h1 class="section_heading">Bicycles</h1>
+        <h2 class="section_subheading">Bicycle Service Packages</h2>
         <div class="flex_grid">
-            <div class="service_item">
+            <div class="service_item_bicycle">
                 <h2>Tune up</h2>
-                <ul class="service_items">
+                <ul>
                     <li>Full check over for worn/damaged parts, loose bolts, etc</li>
                     <li>Tyre pressured checked and/or corrected</li>
                     <li>Brakes and gears checked and adjusted</li>
                     <li>Headset and hub bearings checked and adjusted</li>
                     <li>Full printed health report</li>
                 </ul>
+                <p class="price">£45 excl. parts</p>
             </div>
-            <div class="service_item">
+            <div class="service_item_bicycle">
                 <h2>Overhaul</h2>
-                <ul class="service_items">
+                <ul>
                     <li>Bike washed</li>
                     <li>Full check over for worn/damaged parts, loose bolts, etc</li>
                     <li>Tyre pressured checked and/or corrected</li>
@@ -49,42 +51,72 @@
                     <li>Brake pads are replaced if neccessary</li>
                     <li>Full printed health report</li>
                 </ul>
+                <p class="price">£75 excl. parts</p>
             </div>
-            <div class="service_item">
+            <div class="service_item_bicycle">
                 <h2>Front Fork Service</h2>
-                <ul class="service_items">
+                <ul>
                     <li>Fork cleaned inside and out</li>
                     <li>All seals replaced</li>
                     <li>Oil replaced</li>
                     <li>Headset bearings regreased or replaced</li>
                 </ul>
+                <p class="price">£40 excl. parts</p>
             </div>
-            <div class="service_item">
+            <div class="service_item_bicycle">
                 <h2>Full Suspension Service</h2>
-                <ul class="service_items">
+                <ul>
                     <li>Forks and shock cleaned inside and out</li>
                     <li>All seals replaced</li>
                     <li>Oil replaced</li>
                     <li>Headset bearings regreased or replaced</li>
                     <li>Rear suspension pivot bearings inspected and regreased or replaced if neccessary</li>
                 </ul>
+                <p class="price">£80 excl. parts</p>
             </div>
         </div>
     </section>
     <section id="motorcycles">
-
+        <h1 class="section_heading">Motorcycles</h1>
+        <div class="flex_grid">
+            <div class="service_item_motorcycle">
+                <h2>Chain and Sprockets</h2>
+                <ul>
+                    <li>Chain, front sprocket, and rear sprocket replacement</li>
+                    <li>Chain tension setting</li>
+                </ul>
+            </div>
+            <div class="service_item_motorcycle">
+                <h2>Brakes</h2>
+                <ul>
+                    <li>Brake pad replacement</li>
+                    <li>Brake disc replacement</li>
+                    <li>Brake bleeding</li>
+                </ul>
+            </div>
+            <div class="service_item_motorcycle">
+                <h2>Suspension</h2>
+                <ul>
+                    <li>Fork oil change</li>
+                    <li>Fork seal replacement</li>
+                    <li>Fork rebuild (all seals and bushings replaced)</li>
+                    <li>Rear shock(s) replacement</li>
+                    <li>Swingarm pivot bearing replacament</li>
+                </ul>
+            </div>
+        </div>
     </section>
     <section id="contact_page">
         <form id="contact_form" action="https://api.web3forms.com/submit" method="POST">
             <input type="hidden" name="access_key" value="0b3f6f1a-5223-4924-8458-ddf4ab278a20">
-            <h1 class="section_heading">Get in touch</h1>
+            <h1 class="section_subheading">Get in touch</h1>
             <input type="text" name="name" placeholder="Full Name" class="contact_input">
             <input type="text" name="email" placeholder="Email Address" class="contact_input">
             <textarea name="details" placeholder="How can we help?" class="contact_input" id="message"></textarea>
             <button class="button" type="submit">Submit</button>
         </form>
         <div id="contact_info">
-            <h1 class="section_heading">Contact information</h1>
+            <h1 class="section_subheading">Contact information</h1>
             <div class="label_and_content">
                 <h1 class="label">Telephone: </h1>
                 <h2 class="contact_detail">07557 336 913</h2>
