subsection heading fix

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2 class="section_subheading">Bicycle Service Packages</h2>
         <div class="flex_grid">
             <div class="service_item_bicycle">
-                <h2>Tune up</h2>
+                <h2 class="subsection_subheading">Tune up</h2>
                 <ul>
                     <li>Full check over for worn/damaged parts, loose bolts, etc</li>
                     <li>Tyre pressured checked and/or corrected</li>
@@ -40,7 +40,7 @@
                 <p class="price">£45 excl. parts</p>
             </div>
             <div class="service_item_bicycle">
-                <h2>Overhaul</h2>
+                <h2 class="subsection_subheading">Overhaul</h2>
                 <ul>
                     <li>Bike washed</li>
                     <li>Full check over for worn/damaged parts, loose bolts, etc</li>
@@ -54,7 +54,7 @@
                 <p class="price">£75 excl. parts</p>
             </div>
             <div class="service_item_bicycle">
-                <h2>Front Fork Service</h2>
+                <h2 class="subsection_subheading">Front Fork Service</h2>
                 <ul>
                     <li>Fork cleaned inside and out</li>
                     <li>All seals replaced</li>
@@ -64,7 +64,7 @@
                 <p class="price">£40 excl. parts</p>
             </div>
             <div class="service_item_bicycle">
-                <h2>Full Suspension Service</h2>
+                <h2 class="subsection_subheading">Full Suspension Service</h2>
                 <ul>
                     <li>Forks and shock cleaned inside and out</li>
                     <li>All seals replaced</li>
@@ -80,14 +80,14 @@
         <h1 class="section_heading">Motorcycles</h1>
         <div class="flex_grid">
             <div class="service_item_motorcycle">
-                <h2>Chain and Sprockets</h2>
+                <h2 class="subsection_subheading">Chain and Sprockets</h2>
                 <ul>
                     <li>Chain, front sprocket, and rear sprocket replacement</li>
                     <li>Chain tension setting</li>
                 </ul>
             </div>
             <div class="service_item_motorcycle">
-                <h2>Brakes</h2>
+                <h2 class="subsection_subheading">Brakes</h2>
                 <ul>
                     <li>Brake pad replacement</li>
                     <li>Brake disc replacement</li>
@@ -95,7 +95,7 @@
                 </ul>
             </div>
             <div class="service_item_motorcycle">
-                <h2>Suspension</h2>
+                <h2 class="subsection_subheading">Suspension</h2>
                 <ul>
                     <li>Fork oil change</li>
                     <li>Fork seal replacement</li>
