--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
                 <p class="price">£80 excl. parts</p>
             </div>
         </div>
+        <h2 class="section_subheading">Other Bicycle Services</h2>
+        <div class="flex_grid">
+            <div class="service_item_bicycle">
+                <h2 class="subsection_subheading">Tune up</h2>
+                <ul>
+                    <li>Full check over for worn/damaged parts, loose bolts, etc</li>
+                    <li>Tyre pressured checked and/or corrected</li>
+                    <li>Brakes and gears checked and adjusted</li>
+                    <li>Headset and hub bearings checked and adjusted</li>
+                    <li>Full printed health report</li>
+                </ul>
+                <p class="price">£45 excl. parts</p>
+            </div>
+        </div>
     </section>
     <section id="motorcycles">
         <h1 class="section_heading">Motorcycles</h1>
