--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
             <input type="text" name="name" placeholder="Full Name" class="contact_input">
             <input type="text" name="email" placeholder="Email Address" class="contact_input">
             <textarea name="details" placeholder="How can we help?" class="contact_input" id="message"></textarea>
-            <button class="button" type="submit">Submit</button>
+            <button class="button" type="submit">Submit<img id="submit_icon" src="imgs/send-horizontal.svg"/></button>
+            
         </form>
         <div id="contact_info">
             <h1 class="section_subheading">Contact information</h1>
