header scaling fix

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <header>
     <a class="img_link" href="index.html"><img id="logo" src="imgs/Pedal and Piston Logo Colour Square.png"></a>
-    <a class="nav_button" href="index.html">Home</a></li>
-    <a class="nav_button" href="#bicycles">Bicycles</a></li>
-    <a class="nav_button" href="#motorcycles">Motorcyles</a></li>
-    <a class="nav_button" href="#contact_page">Contact</a></li>
+    <ul id="navbar">
+        <li><a class="nav_button" href="index.html">Home</a></li>
+        <li></li><a class="nav_button" href="#bicycles">Bicycles</a></li>
+        <li></li><a class="nav_button" href="#motorcycles">Motorcyles</a></li>
+        <li></li><a class="nav_button" href="#contact_page">Contact</a></li>
+    </ul>
 </header>
 <body>
     <section id="home">
