--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="hero_bg"></div>
             <div id="hero_content">
                 <h2 id="hero_text">Welcome to Pedal & Piston, we are a local repair shop specialising in anything with two wheels.</h2>
-                <a class="button" href="#contact_page">Book now</a>
+                <a class="book_button" href="#contact_page">Book now</a>
             </div>
         </div>
     </section>
@@ -130,7 +130,7 @@
             <input type="text" name="name" placeholder="Full Name" class="contact_input">
             <input type="text" name="email" placeholder="Email Address" class="contact_input">
             <textarea name="details" placeholder="How can we help?" class="contact_input" id="message"></textarea>
-            <button class="button" type="submit">Submit<img id="submit_icon" src="imgs/send-horizontal.svg"/></button>
+            <button id="submit_button" type="submit">Submit<img id="submit_icon" src="imgs/send-horizontal.svg"/></button>
             
         </form>
         <div id="contact_info">
