content added to bicycle services

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
     <section id="bicycles">   
         <h1 class="section_heading">Bicycles</h1>
-        <h2 class="section_subheading">Bicycle Service Packages</h2>
+        <h2 class="section_subheading">Standard Bicycle Service Packages</h2>
         <div class="flex_grid">
             <div class="service_item_bicycle">
                 <h2 class="subsection_subheading">Tune up</h2>
@@ -41,6 +41,7 @@
                     <li>Full printed health report</li>
                 </ul>
                 <p class="price">£45 excl. parts</p>
+                <a class="book_button" href="#contact_page">Book now</a>
             </div>
             <div class="service_item_bicycle">
                 <h2 class="subsection_subheading">Overhaul</h2>
@@ -55,6 +56,7 @@
                     <li>Full printed health report</li>
                 </ul>
                 <p class="price">£75 excl. parts</p>
+                <a class="book_button" href="#contact_page">Book now</a>
             </div>
             <div class="service_item_bicycle">
                 <h2 class="subsection_subheading">Front Fork Service</h2>
@@ -65,6 +67,7 @@
                     <li>Headset bearings regreased or replaced</li>
                 </ul>
                 <p class="price">£40 excl. parts</p>
+                <a class="book_button" href="#contact_page">Book now</a>
             </div>
             <div class="service_item_bicycle">
                 <h2 class="subsection_subheading">Full Suspension Service</h2>
@@ -76,20 +79,58 @@
                     <li>Rear suspension pivot bearings inspected and regreased or replaced if neccessary</li>
                 </ul>
                 <p class="price">£80 excl. parts</p>
+                <a class="book_button" href="#contact_page">Book now</a>
             </div>
         </div>
         <h2 class="section_subheading">Other Bicycle Services</h2>
         <div class="flex_grid">
             <div class="service_item_bicycle">
-                <h2 class="subsection_subheading">Tune up</h2>
+                <h2 class="subsection_subheading">Wheels/Tyres</h2>
+                <p class="price"> All prices listed are for labour only</p>
                 <ul>
-                    <li>Full check over for worn/damaged parts, loose bolts, etc</li>
-                    <li>Tyre pressured checked and/or corrected</li>
-                    <li>Brakes and gears checked and adjusted</li>
-                    <li>Headset and hub bearings checked and adjusted</li>
-                    <li>Full printed health report</li>
+                    <li>Puncture repair (tubed)<p class="price"> £10 per wheel</p></li>
+                    <li>Tyre fitting (tubed)<p class="price"> £10 per wheel</p></li>
+                    <li>Tubeless tyre setup<p class="price"> £20 per wheel</p></li>
+                    <li>Hub service<p class="price"> £25 per wheel</p></li>
+                    <li>Wheel truing <p class="price"> £20 per wheel</p></li>
+                    <li>Wheel building <p class="price"> £50 per wheel</p></li>
+
                 </ul>
-                <p class="price">£45 excl. parts</p>
+                <a class="book_button" href="#contact_page">Book now</a>
+            </div>
+            <div class="service_item_bicycle">
+                <h2 class="subsection_subheading">Drivetrain</h2>
+                <p class="price"> All prices listed are for labour only</p>
+                <ul>
+                    <li>Chain replacement<p class="price"> £15</p></li>
+                    <li>Chain and cassete replacement<p class="price"> £25</p></li>
+                    <li>Bottom bracket replacement<p class="price"> £25</p></li>
+                </ul>
+                <a class="book_button" href="#contact_page">Book now</a>
+            </div>
+            <div class="service_item_bicycle">
+                <h2 class="subsection_subheading">Brakes</h2>
+                <p class="price"> All prices listed are for labour only</p>
+                <ul>
+                    <li>Hydraulic brake bleeding/fluid flush<p class="price"> £20 per brake</p></li>
+                    <li>Disc brake pad replacement<p class="price"> £8 per brake</p></li>
+                    <li>Disc brake pad and rotor replacament<p class="price"> £15 per brake</p></li>
+                    <li>Rim brake pad replacement<p class="price"> £10 per brake</p></li>
+                    <li>Brake cable replacement<p class="price"> £15 per brake</p></li>
+                    <li>Cable brake adjustment<p class="price"> £10 per brake</p></li>
+                </ul>
+                <a class="book_button" href="#contact_page">Book now</a>
+            </div>
+            <div class="service_item_bicycle">
+                <h2 class="subsection_subheading">Frame and Forks</h2>
+                <p class="price"> All prices listed are for labour only</p>
+                <ul>
+                    <li>Headset bearing replacement<p class="price"> £20</p></li>
+                    <li>Headset installation<p class="price"> £40</p></li>
+                    <li>Fork fitting<p class="price"> £40</p></li>
+                    <li>Fork fitting<p class="price"> £40</p></li>
+                </ul>
+                <a class="book_button" href="#contact_page">Book now</a>
             </div>
         </div>
     </section>
@@ -102,6 +143,7 @@
                     <li>Chain, front sprocket, and rear sprocket replacement</li>
                     <li>Chain tension setting</li>
                 </ul>
+                <a class="book_button" href="#contact_page">Contact for a quote</a>
             </div>
             <div class="service_item_motorcycle">
                 <h2 class="subsection_subheading">Brakes</h2>
@@ -130,7 +172,7 @@
             <input type="text" name="name" placeholder="Full Name" class="contact_input">
             <input type="text" name="email" placeholder="Email Address" class="contact_input">
             <textarea name="details" placeholder="How can we help?" class="contact_input" id="message"></textarea>
-            <button id="submit_button" type="submit">Submit<img id="submit_icon" src="imgs/send-horizontal.svg"/></button>
+            <button id="submit_button" type="submit">Submit</button>
             
         </form>
         <div id="contact_info">
