Changed motorcycle content

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li>Headset and hub bearings checked and adjusted</li>
                     <li>Full printed health report</li>
                 </ul>
-                <p class="price">£45 excl. parts</p>
+                <p class="price">&pound;45 excl. parts</p>
                 <a class="book_button" href="#contact_page">Book now</a>
             </div>
             <div class="service_item_bicycle">
@@ -55,7 +55,7 @@
                     <li>Brake pads are replaced if neccessary</li>
                     <li>Full printed health report</li>
                 </ul>
-                <p class="price">£75 excl. parts</p>
+                <p class="price">&pound;75 excl. parts</p>
                 <a class="book_button" href="#contact_page">Book now</a>
             </div>
             <div class="service_item_bicycle">
@@ -66,7 +66,7 @@
                     <li>Oil replaced</li>
                     <li>Headset bearings regreased or replaced</li>
                 </ul>
-                <p class="price">£40 excl. parts</p>
+                <p class="price">&pound;40 excl. parts</p>
                 <a class="book_button" href="#contact_page">Book now</a>
             </div>
             <div class="service_item_bicycle">
@@ -78,7 +78,7 @@
                     <li>Headset bearings regreased or replaced</li>
                     <li>Rear suspension pivot bearings inspected and regreased or replaced if neccessary</li>
                 </ul>
-                <p class="price">£80 excl. parts</p>
+                <p class="price">&pound;80 excl. parts</p>
                 <a class="book_button" href="#contact_page">Book now</a>
             </div>
         </div>
@@ -88,12 +88,12 @@
                 <h2 class="subsection_subheading">Wheels/Tyres</h2>
                 <p class="price"> All prices listed are for labour only</p>
                 <ul>
-                    <li>Puncture repair (tubed)<p class="price"> £10 per wheel</p></li>
-                    <li>Tyre fitting (tubed)<p class="price"> £10 per wheel</p></li>
-                    <li>Tubeless tyre setup<p class="price"> £20 per wheel</p></li>
-                    <li>Hub service<p class="price"> £25 per wheel</p></li>
-                    <li>Wheel truing <p class="price"> £20 per wheel</p></li>
-                    <li>Wheel building <p class="price"> £50 per wheel</p></li>
+                    <li>Puncture repair (tubed)<p class="price"> &pound;10 per wheel</p></li>
+                    <li>Tyre fitting (tubed)<p class="price"> &pound;10 per wheel</p></li>
+                    <li>Tubeless tyre setup<p class="price"> &pound;20 per wheel</p></li>
+                    <li>Hub service<p class="price"> &pound;25 per wheel</p></li>
+                    <li>Wheel truing <p class="price"> &pound;20 per wheel</p></li>
+                    <li>Wheel building <p class="price"> &pound;50 per wheel</p></li>
 
                 </ul>
                 <a class="book_button" href="#contact_page">Book now</a>
@@ -102,9 +102,9 @@
                 <h2 class="subsection_subheading">Drivetrain</h2>
                 <p class="price"> All prices listed are for labour only</p>
                 <ul>
-                    <li>Chain replacement<p class="price"> £15</p></li>
-                    <li>Chain and cassete replacement<p class="price"> £25</p></li>
-                    <li>Bottom bracket replacement<p class="price"> £25</p></li>
+                    <li>Chain replacement<p class="price"> &pound;15</p></li>
+                    <li>Chain and cassete replacement<p class="price"> &pound;25</p></li>
+                    <li>Bottom bracket replacement<p class="price"> &pound;25</p></li>
                 </ul>
                 <a class="book_button" href="#contact_page">Book now</a>
             </div>
@@ -112,12 +112,12 @@
                 <h2 class="subsection_subheading">Brakes</h2>
                 <p class="price"> All prices listed are for labour only</p>
                 <ul>
-                    <li>Hydraulic brake bleeding/fluid flush<p class="price"> £20 per brake</p></li>
-                    <li>Disc brake pad replacement<p class="price"> £8 per brake</p></li>
-                    <li>Disc brake pad and rotor replacament<p class="price"> £15 per brake</p></li>
-                    <li>Rim brake pad replacement<p class="price"> £10 per brake</p></li>
-                    <li>Brake cable replacement<p class="price"> £15 per brake</p></li>
-                    <li>Cable brake adjustment<p class="price"> £10 per brake</p></li>
+                    <li>Hydraulic brake bleeding/fluid flush<p class="price"> &pound;20 per brake</p></li>
+                    <li>Disc brake pad replacement<p class="price"> &pound;8 per brake</p></li>
+                    <li>Disc brake pad and rotor replacament<p class="price"> &pound;15 per brake</p></li>
+                    <li>Rim brake pad replacement<p class="price"> &pound;10 per brake</p></li>
+                    <li>Brake cable replacement<p class="price"> &pound;15 per brake</p></li>
+                    <li>Cable brake adjustment<p class="price"> &pound;10 per brake</p></li>
                 </ul>
                 <a class="book_button" href="#contact_page">Book now</a>
             </div>
@@ -125,10 +125,10 @@
                 <h2 class="subsection_subheading">Frame and Forks</h2>
                 <p class="price"> All prices listed are for labour only</p>
                 <ul>
-                    <li>Headset bearing replacement<p class="price"> £20</p></li>
-                    <li>Headset installation<p class="price"> £40</p></li>
-                    <li>Fork fitting<p class="price"> £40</p></li>
-                    <li>Fork fitting<p class="price"> £40</p></li>
+                    <li>Headset bearing replacement<p class="price"> &pound;20</p></li>
+                    <li>Headset installation<p class="price"> &pound;40</p></li>
+                    <li>Fork fitting<p class="price"> &pound;40</p></li>
+                    <li>Fork fitting<p class="price"> &pound;40</p></li>
                 </ul>
                 <a class="book_button" href="#contact_page">Book now</a>
             </div>
@@ -136,32 +136,39 @@
     </section>
     <section id="motorcycles">
         <h1 class="section_heading">Motorcycles</h1>
+        <p class="price">Motorcycle work is individually quoted, contact us with some details about what you need and we will give you a quote</p>
+        <a class="book_button" href="#contact_page">Contact for a quote</a>
         <div class="flex_grid">
             <div class="service_item_motorcycle">
-                <h2 class="subsection_subheading">Chain and Sprockets</h2>
+                <h2 class="subsection_subheading">Servicing</h2>
                 <ul>
-                    <li>Chain, front sprocket, and rear sprocket replacement</li>
-                    <li>Chain tension setting</li>
-                </ul>
+                    <li>Oil changes</li>
+                    <li>Air filter replacement</li>
+                    <li>Spark plugs</li>
                 <a class="book_button" href="#contact_page">Contact for a quote</a>
             </div>
             <div class="service_item_motorcycle">
-                <h2 class="subsection_subheading">Brakes</h2>
+                <h2 class="subsection_subheading">Repairs</h2>
                 <ul>
-                    <li>Brake pad replacement</li>
-                    <li>Brake disc replacement</li>
-                    <li>Brake bleeding</li>
+                    <li>Brakes</li>
+                    <li>Chain and sprockets</li>
+                    <li>Bearings
+                        <ul>
+                            <li>Head bearings</li>
+                            <li>Swingarm bearings</li>
+                            <li>Wheel bearings</li>
+                        </ul>
+                    </li>
+                    <li>Suspension
+                        <ul>
+                            <li>Fork seals/bushes</li>
+                            <li>Rear shock replacament</li>
+                        </ul>
+                    </li>
+                    <li>Electrical diagnosis and repairs</li>
+                    <li>Minor engine repairs (oil leak repairs etc)</li>
                 </ul>
-            </div>
-            <div class="service_item_motorcycle">
-                <h2 class="subsection_subheading">Suspension</h2>
-                <ul>
-                    <li>Fork oil change</li>
-                    <li>Fork seal replacement</li>
-                    <li>Fork rebuild (all seals and bushings replaced)</li>
-                    <li>Rear shock(s) replacement</li>
-                    <li>Swingarm pivot bearing replacament</li>
-                </ul>
+                <a class="book_button" href="#contact_page">Contact for a quote</a>
             </div>
         </div>
     </section>
@@ -171,6 +178,11 @@
             <h1 class="section_subheading">Get in touch</h1>
             <input type="text" name="name" placeholder="Full Name" class="contact_input">
             <input type="text" name="email" placeholder="Email Address" class="contact_input">
+            <select name="type" class="contact_input">
+                <option value="" disabled selected>Please select</option>
+                <option value="bicycle">Bicycle</option>
+                <option value="motorcycle">Motorcycle</option>
+            </select>
             <textarea name="details" placeholder="How can we help?" class="contact_input" id="message"></textarea>
             <button id="submit_button" type="submit">Submit</button>
             
