--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>Pedal and Piston - Home</title>
+    <link rel="icon" type="image/x-icon" href="imgs/Pedal_and_Piston_Logo_Colour_No_Background.ico">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
     <meta name="format-detection" content="telephone=no">
-    
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
         <div id="hero">
             <div id="hero_bg"></div>
             <div id="hero_content">
-                <h2 id="hero_text">Welcome to Pedal & Piston, we are a local repair shop specialising in anything with two wheels.</h2>
+                <h2 id="hero_text">Welcome to Pedal & Piston, we are a local bicycle and motorcycle repair shop serving Clevedon and surrounding areas</h2>
                 <a class="book_button" href="#contact_page">Book now</a>
             </div>
         </div>
