--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <a class="img_link" href="index.html"><img id="logo" src="imgs/Pedal and Piston Logo Colour Square.png"></a>
         <ul id="navbar">
             <li><a class="nav_button" href="index.html">Home</a></li>
-            <li></li><a class="nav_button" href="#bicycles">Bicycles</a></li>
-            <li></li><a class="nav_button" href="#motorcycles">Motorcyles</a></li>
-            <li></li><a class="nav_button" href="#contact_page">Contact</a></li>
+            <li><a class="nav_button" href="#bicycles">Bicycles</a></li>
+            <li><a class="nav_button" href="#motorcycles">Motorcyles</a></li>
+            <li><a class="nav_button" href="#contact_page">Contact</a></li>
         </ul>
     </header>
     <section id="home">
