changed logo img name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a class="img_link" href="index.html"><img id="logo" src="imgs/Pedal and Piston Logo Colour Square.png"></a>
+        <a class="img_link" href="index.html"><img id="logo" src="imgs/Pedal_and_Piston_Logo_Colour_Square.png"></a>
         <ul id="navbar">
             <li><a class="nav_button" href="index.html">Home</a></li>
             <li><a class="nav_button" href="#bicycles">Bicycles</a></li>
