added alt atributes to imgs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a class="img_link" href="index.html"><img id="logo" src="imgs/Pedal_and_Piston_Logo_Colour_Square.png"></a>
+        <a class="img_link" href="index.html"><img id="logo" src="imgs/Pedal_and_Piston_Logo_Colour_Square.png" alt="Pedal and Piston logo"></a>
         <ul id="navbar">
             <li><a class="nav_button" href="index.html">Home</a></li>
             <li><a class="nav_button" href="#bicycles">Bicycles</a></li>
@@ -25,7 +25,6 @@
                 <a class="book_button" href="#contact_page">Book now</a>
             </div>
         </div>
-    </section>
     </section>
     <section id="bicycles">   
         <h1 class="section_heading">Bicycles</h1>
@@ -145,6 +144,7 @@
                     <li>Oil changes</li>
                     <li>Air filter replacement</li>
                     <li>Spark plugs</li>
+                </ul>
                 <a class="book_button" href="#contact_page">Contact for a quote</a>
             </div>
             <div class="service_item_motorcycle">
@@ -199,8 +199,8 @@
             </div>
             <h1 class="section_heading">Socials</h1>
             <div id="social_icons">
-                <a class="img_link" href="https://www.instagram.com/pedalandpistonrepair/" target="_blank"><img class="social_icon" src="imgs/instagram.png"></a>
-                <a class="img_link" href="https://www.facebook.com/profile.php?id=61574399960883" target="_blank"><img class="social_icon" src="imgs/facebook.png"></a>
+                <a class="img_link" href="https://www.instagram.com/pedalandpistonrepair/" target="_blank"><img class="social_icon" src="imgs/instagram.png" alt="Instagram logo"></a>
+                <a class="img_link" href="https://www.facebook.com/profile.php?id=61574399960883" target="_blank"><img class="social_icon" src="imgs/facebook.png" alt="Facebook logo"></a>
             </div>
         </div>
     </section>
