removed trailing slash

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
     <meta name="format-detection" content="telephone=no">
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
 </head>
 <body>
     <header>
