phone number changed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="icon" type="image/x-icon" href="imgs/Pedal_and_Piston_Logo_Colour_No_Background.ico">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
-    <meta name="format-detection" content="telephone=no">
     <meta charset="UTF-8">
 </head>
 <body>
@@ -191,7 +190,7 @@
             <h1 class="section_subheading">Contact information</h1>
             <div class="label_and_content">
                 <h1 class="label">Telephone: </h1>
-                <h2 class="contact_detail">07557 336 913</h2>
+                <h2 class="contact_detail">01275 605673</h2>
             </div>
             <div class="label_and_content">
                 <h1 class="label">Email: </h1>
