--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 </head>
 <body>
     <header>
+        <div>
         <a class="img_link" href="index.html"><img id="logo" src="imgs/Pedal_and_Piston_Logo_Colour_Square.png" alt="Pedal and Piston logo"></a>
+        </div>
+        <div>
         <ul id="navbar">
             <li><a class="nav_button" href="index.html">Home</a></li>
             <li><a class="nav_button" href="#bicycles">Bicycles</a></li>
             <li><a class="nav_button" href="#motorcycles">Motorcyles</a></li>
             <li><a class="nav_button" href="#contact_page">Contact</a></li>
         </ul>
+        </div>
     </header>
-    <section id="home">
+    <section>
         <div id="hero">
             <div id="hero_bg"></div>
             <div id="hero_content">
@@ -34,7 +38,7 @@
                 <h2 class="subsection_subheading">Tune up</h2>
                 <ul>
                     <li>Full check over for worn/damaged parts, loose bolts, etc</li>
-                    <li>Tyre pressured checked and/or corrected</li>
+                    <li>Tyre pressure checked and/or corrected</li>
                     <li>Brakes and gears checked and adjusted</li>
                     <li>Headset and hub bearings checked and adjusted</li>
                     <li>Full printed health report</li>
@@ -47,11 +51,11 @@
                 <ul>
                     <li>Bike washed</li>
                     <li>Full check over for worn/damaged parts, loose bolts, etc</li>
-                    <li>Tyre pressured checked and/or corrected</li>
+                    <li>Tyre pressure checked and/or corrected</li>
                     <li>Headset and hub bearings regreased or replaced</li>
                     <li>All inner and outer gear cables are replaced</li>
                     <li>Brake cables are replaced if brakes are cable operated or bled if hydraulic</li>
-                    <li>Brake pads are replaced if neccessary</li>
+                    <li>Brake pads are replaced if necessary</li>
                     <li>Full printed health report</li>
                 </ul>
                 <p class="price">&pound;75 excl. parts</p>
@@ -75,7 +79,7 @@
                     <li>All seals replaced</li>
                     <li>Oil replaced</li>
                     <li>Headset bearings regreased or replaced</li>
-                    <li>Rear suspension pivot bearings inspected and regreased or replaced if neccessary</li>
+                    <li>Rear suspension pivot bearings inspected and regreased or replaced if necessary</li>
                 </ul>
                 <p class="price">&pound;80 excl. parts</p>
                 <a class="book_button" href="#contact_page">Book now</a>
@@ -102,7 +106,7 @@
                 <p class="price"> All prices listed are for labour only</p>
                 <ul>
                     <li>Chain replacement<p class="price"> &pound;15</p></li>
-                    <li>Chain and cassete replacement<p class="price"> &pound;25</p></li>
+                    <li>Chain and cassette replacement<p class="price"> &pound;25</p></li>
                     <li>Bottom bracket replacement<p class="price"> &pound;25</p></li>
                 </ul>
                 <a class="book_button" href="#contact_page">Book now</a>
@@ -113,7 +117,7 @@
                 <ul>
                     <li>Hydraulic brake bleeding/fluid flush<p class="price"> &pound;20 per brake</p></li>
                     <li>Disc brake pad replacement<p class="price"> &pound;8 per brake</p></li>
-                    <li>Disc brake pad and rotor replacament<p class="price"> &pound;15 per brake</p></li>
+                    <li>Disc brake pad and rotor replacement<p class="price"> &pound;15 per brake</p></li>
                     <li>Rim brake pad replacement<p class="price"> &pound;10 per brake</p></li>
                     <li>Brake cable replacement<p class="price"> &pound;15 per brake</p></li>
                     <li>Cable brake adjustment<p class="price"> &pound;10 per brake</p></li>
@@ -126,7 +130,6 @@
                 <ul>
                     <li>Headset bearing replacement<p class="price"> &pound;20</p></li>
                     <li>Headset installation<p class="price"> &pound;40</p></li>
-                    <li>Fork fitting<p class="price"> &pound;40</p></li>
                     <li>Fork fitting<p class="price"> &pound;40</p></li>
                 </ul>
                 <a class="book_button" href="#contact_page">Book now</a>
@@ -162,7 +165,7 @@
                     <li>Suspension
                         <ul>
                             <li>Fork seals/bushes</li>
-                            <li>Rear shock replacament</li>
+                            <li>Rear shock replacement</li>
                         </ul>
                     </li>
                     <li>Electrical diagnosis and repairs</li>
@@ -204,7 +207,7 @@
         </div>
     </section>
     <hr class="style-one">
-    <div class="footer">
+    <div>
         <ul id="credits">
             <li><a class="credit" href="https://www.flaticon.com/free-icons/facebook" target="_blank" title="facebook icons">Facebook icons created by Bogdan Rosu - Flaticon</a></li>
             <li><a class="credit" href="https://www.flaticon.com/free-icons/instagram-logo" target="_blank" title="instagram logo icons">Instagram logo icons created by Freepik - Flaticon</a></li>
